fix(followscroll): detect wrapping lines

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body.scrolling-horizontal-code-blocks .markdown-source-view .HyperMD-codeblock.H
 }
 
 body.scrolling-horizontal-code-blocks .markdown-source-view .HyperMD-codeblock.HyperMD-codeblock-begin.HyperMD-codeblock-begin-bg.HyperMD-codeblock-bg.cm-line {
-    padding-bottom: 0.6rem;
+    padding-bottom: 0.3rem;
 }
 
 /* preview view */
